# cellular-automaton

./: LICENSE  README.md  pyproject.toml
cellular_automaton/: drafts.ipynb
