[tool.poetry]
authors = ["federico <federico.montanana@gmail.com>"]
description = ""
name = "cellular-automaton"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.24.1"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
